--- a/index.html
+++ b/index.html
@@ -7,52 +7,43 @@
     <title>당신 근처의 당근</title>
 </head>
 <body>
-    <div class="header-container">
-        <header>
-            <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="120" height="60" viewBox="0 0 651.6 320.51">
-                    <path fill="#FF6F0F" d="M93.703 118.255C41.959 118.255 0 159.28 0 211.075 0 282.64 93.967 320.61 93.703 320.509c-.254.102 93.702-37.868 93.702-109.434 0-51.764-41.959-92.82-93.702-92.82zm0 130.404a35.484 35.484 0 1 1 35.504-35.483 35.463 35.463 0 0 1-35.504 35.544z"/>
-                    <path fill="#00A05B" d="M114.794 0C92.93 0 77.696 15.286 75.31 33.332c-29.16-8.049-51.997 14.108-51.997 38.467 0 18.646 12.82 33.718 29.901 38.61 13.784 3.938 38.6 1.005 38.6 1.005-.132-6.029 5.42-12.647 13.986-18.676 24.36-17.122 43.4-25.201 46.334-48.556C155.21 19.742 137.073 0 114.794 0Z"/>
-                    <path fill="#FF6F0F" d="M373.38 150.521c-19.793 6.222-54.048 9.53-86.233 9.53v-39.157h66.47v-29.14H251.492v99.285c55.854 0 104.614-6.73 125.197-13.103l-3.309-27.405zm46.922-70.389h-35.595v114.135h35.595v-35.778h28.724v-31.14h-28.724zm-66.106 113.87c-37.716 0-65.364 20.777-65.364 51.277s27.678 51.287 65.364 51.287c37.686 0 65.365-20.797 65.365-51.287 0-30.48-27.658-51.276-65.365-51.276zm0 74.013c-17 0-29.749-8.15-29.749-22.787 0-14.625 12.749-22.765 29.74-22.765 17 0 29.758 8.15 29.758 22.765 0 14.616-12.738 22.787-29.749 22.787zm164.153-58.88H481.95v77.22h144.645v-30.56H518.349Zm103.73-119.482H480.307v30.56h106.045c0 7.593.365 25.65-3.116 46.162H453.218v31.606H650.6v-31.565h-35.169c4.72-25.913 6.06-46.121 6.648-76.763Z"/>
-                </svg>
+    <header>
+        <div class="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="120" height="60" viewBox="0 0 651.6 320.51">
+                <path fill="#FF6F0F" d="M93.703 118.255C41.959 118.255 0 159.28 0 211.075 0 282.64 93.967 320.61 93.703 320.509c-.254.102 93.702-37.868 93.702-109.434 0-51.764-41.959-92.82-93.702-92.82zm0 130.404a35.484 35.484 0 1 1 35.504-35.483 35.463 35.463 0 0 1-35.504 35.544z"/>
+                <path fill="#00A05B" d="M114.794 0C92.93 0 77.696 15.286 75.31 33.332c-29.16-8.049-51.997 14.108-51.997 38.467 0 18.646 12.82 33.718 29.901 38.61 13.784 3.938 38.6 1.005 38.6 1.005-.132-6.029 5.42-12.647 13.986-18.676 24.36-17.122 43.4-25.201 46.334-48.556C155.21 19.742 137.073 0 114.794 0Z"/>
+                <path fill="#FF6F0F" d="M373.38 150.521c-19.793 6.222-54.048 9.53-86.233 9.53v-39.157h66.47v-29.14H251.492v99.285c55.854 0 104.614-6.73 125.197-13.103l-3.309-27.405zm46.922-70.389h-35.595v114.135h35.595v-35.778h28.724v-31.14h-28.724zm-66.106 113.87c-37.716 0-65.364 20.777-65.364 51.277s27.678 51.287 65.364 51.287c37.686 0 65.365-20.797 65.365-51.287 0-30.48-27.658-51.276-65.365-51.276zm0 74.013c-17 0-29.749-8.15-29.749-22.787 0-14.625 12.749-22.765 29.74-22.765 17 0 29.758 8.15 29.758 22.765 0 14.616-12.738 22.787-29.749 22.787zm164.153-58.88H481.95v77.22h144.645v-30.56H518.349Zm103.73-119.482H480.307v30.56h106.045c0 7.593.365 25.65-3.116 46.162H453.218v31.606H650.6v-31.565h-35.169c4.72-25.913 6.06-46.121 6.648-76.763Z"/>
+            </svg>
+        </div>
+        <nav>
+            <a href="#">중고거래</a>
+            <a href="#">부동산</a>
+            <a href="#">중고차</a>
+            <a href="#" class="with-submenu">알바</a>
+            <div class="sub-menu">
+                <a href="#">알바 검색</a>
+                <a href="#">당근알바 소개</a>
+                <a href="#">기업형 서비스</a>
+                <a href="#">신뢰와 안전</a>
             </div>
-            <nav>
-                <a href="#">중고거래</a>
-                <a href="#">부동산</a>
-                <a href="#">중고차</a>
-                <a href="#" class="with-submenu">알바</a>
-                <div class="sub-menu">
-                    <a href="#">알바 검색</a>
-                    <a href="#">당근알바 소개</a>
-                    <a href="#">기업형 서비스</a>
-                    <a href="#">신뢰와 안전</a>
-                </div>
-                <a href="#">동네업체</a>
-                <a href="#">동네생활</a>
-                <a href="#">모임</a>
-            </nav>
-            <button class="app-download-button">
-                <a href="#">앱 다운로드</a>
-            </button>
-        </header>
-    </div>
+            <a href="#">동네업체</a>
+            <a href="#">동네생활</a>
+            <a href="#">모임</a>
+        </nav>
+        <button class="app-download-button">
+            <a href="#">앱 다운로드</a>
+        </button>
+    </header>
     <div class="search-container">
         <section class="location">
             <a href="#">유성구</a>
         </section>
         <section class="search-bar">
-            <a href="#" class="with-seacrh-menu">중고거래</a>
-            <div class="search-submenu">
-                <a href="#">동네업체</a>
-                <a href="#">알바</a>
-                <a href="#">중고차</a>
-                <a href="#">부동산</a>
-            </div>
             <input type="text" placeholder="검색어를 입력해주세요">
         </section>
         <section class="popular-searches">
             <nav>
-                <p>인기 검색어
+                <p>인기 검색어</p>
                 <a href="#" class="search-item">아이폰</a>
                 <a href="#" class="search-item">의자</a>
                 <a href="#" class="search-item">자전거</a>
@@ -63,7 +54,6 @@
                 <a href="#" class="search-item">전기자전거</a>
                 <a href="#" class="search-item">식탁</a>
                 <a href="#" class="search-item">모니터</a>
-                </p>
             </nav>
         </section>
     </div>
@@ -175,9 +165,9 @@
                 </ul>
             </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com/daangn/"><img src="" alt="facebook"></a>
-                <a href="https://www.instagram.com/daangnmarket/"><img src="" alt="instagram"></a>
-                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img src="" alt="youtube"></a>
+                <a href="https://www.facebook.com/daangn/" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#3F51B5" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"/><path fill="#FFF" d="M34.368,25H31v13h-5V25h-3v-4h3v-2.41c0.002-3.508,1.459-5.59,5.592-5.59H35v4h-2.287C31.104,17,31,17.6,31,18.723V21h4L34.368,25z"/></svg></a>
+                <a href="https://www.instagram.com/daangnmarket/" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><radialGradient id="yOrnnhliCrdS2gy~4tD8ma" cx="19.38" cy="42.035" r="44.899" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"/><stop offset=".328" stop-color="#ff543f"/><stop offset=".348" stop-color="#fc5245"/><stop offset=".504" stop-color="#e64771"/><stop offset=".643" stop-color="#d53e91"/><stop offset=".761" stop-color="#cc39a4"/><stop offset=".841" stop-color="#c837ab"/></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8ma)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><radialGradient id="yOrnnhliCrdS2gy~4tD8mb" cx="11.786" cy="5.54" r="29.813" gradientTransform="matrix(1 0 0 .6663 0 1.849)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#4168c9"/><stop offset=".999" stop-color="#4168c9" stop-opacity="0"/></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8mb)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"/><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"/><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"/></svg></a>
+                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"/><path fill="#FFF" d="M20 31L20 17 32 24z"/></svg></a>
             </div>
             <div class="footer-bottom">
                 <p>(주) 당근마켓</p><br>
@@ -187,7 +177,7 @@
                 <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
                 <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
                 <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
-                <p>이용약관</p> <p>개인정보처리방침</p>  <p>운영정책</p>  <p>위치기반서비스</p> <p>이용약관</p>  <p>청소년보호정책</p>
+                <p>이용약관   |   개인정보처리방침   |   운영정책   |   위치기반서비스   |   이용약관   |   청소년보호정책</p>
             </div>
         </footer>
     </div>
