--- a/index.html
+++ b/index.html
@@ -34,26 +34,31 @@
             <a href="#">앱 다운로드</a>
         </button>
     </header>
+
     <div class="search-container">
         <section class="location">
             <a href="#">유성구</a>
+            <img src="" alt-="location-icon">
         </section>
         <section class="search-bar">
             <input type="text" placeholder="검색어를 입력해주세요">
+            <button type="search-button">
+                <img src="" alt="search-button">
+            </button>
         </section>
         <section class="popular-searches">
             <nav>
-                <p>인기 검색어</p>
-                <a href="#" class="search-item">아이폰</a>
-                <a href="#" class="search-item">의자</a>
-                <a href="#" class="search-item">자전거</a>
-                <a href="#" class="search-item">컴퓨터</a>
-                <a href="#" class="search-item">책상</a>
-                <a href="#" class="search-item">소파</a>
-                <a href="#" class="search-item">원피스</a>
-                <a href="#" class="search-item">전기자전거</a>
-                <a href="#" class="search-item">식탁</a>
-                <a href="#" class="search-item">모니터</a>
+                인기 검색어
+                <a href="#">아이폰</a>
+                <a href="#">의자</a>
+                <a href="#">자전거</a>
+                <a href="#">컴퓨터</a>
+                <a href="#"></a>책상</a>
+                <a href="#">소파</a>
+                <a href="#">원피스</a>
+                <a href="#">전기자전거</a>
+                <a href="#">식탁</a>
+                <a href="#">모니터</a>
             </nav>
         </section>
     </div>
@@ -69,8 +74,8 @@
         </section>
     </div>
     <div class="category-container">
+        <h2>인기 카테고리</h2>
         <section class="categories">
-            <h2>인기 카테고리</h2>
             <div class="category-list">
                 <div class="category-item">
                     <img src="https://dnvefa72aowie.cloudfront.net/origin/etc/202403/d29808aa01c0a41269248321a456abe2abe0c66e390dd54cc3db0faa50bf8c4b.png" alt="디지털기기">
@@ -121,7 +126,7 @@
         </section>
     </div>
     <div class="footer-container">
-        <footer>
+        <div class="footer-right">
             <div class="footer-links">
                 <h4>회사</h4>
                 <ul>
@@ -164,22 +169,24 @@
                     <li><a href="#">고객센터</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="footer-left">
             <div class="footer-social">
-                <a href="https://www.facebook.com/daangn/" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#3F51B5" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z"/><path fill="#FFF" d="M34.368,25H31v13h-5V25h-3v-4h3v-2.41c0.002-3.508,1.459-5.59,5.592-5.59H35v4h-2.287C31.104,17,31,17.6,31,18.723V21h4L34.368,25z"/></svg></a>
-                <a href="https://www.instagram.com/daangnmarket/" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><radialGradient id="yOrnnhliCrdS2gy~4tD8ma" cx="19.38" cy="42.035" r="44.899" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"/><stop offset=".328" stop-color="#ff543f"/><stop offset=".348" stop-color="#fc5245"/><stop offset=".504" stop-color="#e64771"/><stop offset=".643" stop-color="#d53e91"/><stop offset=".761" stop-color="#cc39a4"/><stop offset=".841" stop-color="#c837ab"/></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8ma)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><radialGradient id="yOrnnhliCrdS2gy~4tD8mb" cx="11.786" cy="5.54" r="29.813" gradientTransform="matrix(1 0 0 .6663 0 1.849)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#4168c9"/><stop offset=".999" stop-color="#4168c9" stop-opacity="0"/></radialGradient><path fill="url(#yOrnnhliCrdS2gy~4tD8mb)" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"/><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"/><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"/></svg></a>
+                <a href="https://www.facebook.com/daangn/"></a>
+                <a href="https://www.instagram.com/daangnmarket/"></a>0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z"/><path fill="#fff" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"/><circle cx="31.5" cy="16.5" r="1.5" fill="#fff"/><path fill="#fff" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z"/></svg></a>
                 <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured" svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"/><path fill="#FFF" d="M20 31L20 17 32 24z"/></svg></a>
             </div>
-            <div class="footer-bottom">
-                <p>(주) 당근마켓</p><br>
-                <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
-                <p>직업정보제공사업 신고번호 J1200020200016<br></p>
-                <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
-                <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
-                <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
-                <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
-                <p>이용약관   |   개인정보처리방침   |   운영정책   |   위치기반서비스   |   이용약관   |   청소년보호정책</p>
-            </div>
-        </footer>
+        </div>
+        <div class="footer-bottom">
+            <p>(주) 당근마켓</p><br>
+            <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
+            <p>직업정보제공사업 신고번호 J1200020200016<br></p>
+            <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
+            <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
+            <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
+            <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
+            
+        </div>
     </div>
 </body>
 </html>
