--- a/index.html
+++ b/index.html
@@ -39,35 +39,35 @@
             <a href="#">유성구</a>
             <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
         </section>
-        <div class="search-others">
-            <div class="search-bar">
-                <div class="search-bar-button">
-                    <a href="#">중고거래</a>
-                </div>
-                <div class="search-bar-input">
-                    <input type="text" placeholder="검색어를 입력해주세요">
-                </div>
-                <div class="search-icon">
-                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
-                </div>
+    </div>
+    <section class="search-others">
+        <div class="search-bar">
+            <div class="search-bar-button">
+                <a href="#">중고거래</a>
+            </div>
+            <div class="search-bar-input">
+                <input type="text" placeholder="검색어를 입력해주세요">
+            </div>
+            <div class="search-icon">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
             </div>
         </div>
-        <section class="popular-searches">
-            <nav>
-                인기 검색어
-                <a href="#">아이폰</a>
-                <a href="#">의자</a>
-                <a href="#">자전거</a>
-                <a href="#">컴퓨터</a>
-                <a href="#">책상</a>
-                <a href="#">소파</a>
-                <a href="#">원피스</a>
-                <a href="#">전기자전거</a>
-                <a href="#">식탁</a>
-                <a href="#">모니터</a>
-            </nav>
-        </section>
-    </div>
+    </section>
+    <section class="popular-searches">
+        <nav>
+            인기 검색어
+            <a href="#">아이폰</a>
+            <a href="#">의자</a>
+            <a href="#">자전거</a>
+            <a href="#">컴퓨터</a>
+            <a href="#">책상</a>
+            <a href="#">소파</a>
+            <a href="#">원피스</a>
+            <a href="#">전기자전거</a>
+            <a href="#">식탁</a>
+            <a href="#">모니터</a>
+        </nav>
+    </section>
     <div class="main-container">
         <section class="banner">
             <div class="banner-text">
@@ -127,7 +127,7 @@
             </div>
         </section>
     </div>
-    <div class="footer-container">
+    <div class="footer-right-group">
         <div class="footer-right">
             <div class="footer-links-1">
                 <h4>회사</h4>
@@ -172,32 +172,32 @@
                 </ul>
             </div>
         </div>
-        <div class="footer-left">
-            <div class="footer-logo">
-                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
-            </div>
-            <div class="footer-social">
-                <a href="https://www.facebook.com/daangn/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo"></a>
-                <a href="https://www.instagram.com/daangnmarket/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo"></a>
-                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo"></a>
-            </div>
+    </div>
+    <div class="footer-left">
+        <div class="footer-logo">
+            <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
         </div>
-        <div class="footer-bottom">
-            <p>(주) 당근마켓</p><br>
-            <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
-            <p>직업정보제공사업 신고번호 J1200020200016<br></p>
-            <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
-            <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
-            <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
-            <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
-            <div class="footer-links-2">
-                <a href="#"><p>이용약관</p></a>
-                <a href="#"><p>개인정보처리방침</p></a>
-                <a href="#"><p>운영정책</p></a>
-                <a href="#"><p>위치기반서비스 이용약관</p></a>
-                <a href="#"><p>이용자보호 비전과 계획</p></a>
-                <a href="#"><p>청소년보호정책</p></a>
-            </div>
+        <div class="footer-social">
+            <a href="https://www.facebook.com/daangn/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo"></a>
+            <a href="https://www.instagram.com/daangnmarket/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo"></a>
+            <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo"></a>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>(주) 당근마켓</p><br>
+        <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
+        <p>직업정보제공사업 신고번호 J1200020200016<br></p>
+        <p>통신판매업 신고번호 2021-서울서초-2875<br></p>
+        <p>호스팅 사업자 Amazon Web Service(AWS)<br></p>
+        <p>주소 서울특별시 구로구 디지털로30길 28, 609호(당근서비스)<br></p>
+        <p>전화 1544-9796 | 고객문의 cs@daangnservice.com<br></p>
+        <div class="footer-links-2">
+            <a href="#"><p>이용약관</p></a>
+            <a href="#"><p>개인정보처리방침</p></a>
+            <a href="#"><p>운영정책</p></a>
+            <a href="#"><p>위치기반서비스 이용약관</p></a>
+            <a href="#"><p>이용자보호 비전과 계획</p></a>
+            <a href="#"><p>청소년보호정책</p></a>
         </div>
     </div>
 </body>
